# the_jouch

./: .gitignore  .ignore  Cargo.toml  LICENSE  README.md  Shuttle.toml
assets/: info.md  jouch.xcf  party-hat.blend
assets/denim_mat/: denmin_fabric_02_4k.blend
migrations/: 0001_init.sql  0002_novenas.sql
src/: canned_responses.rs  config.rs  db.rs  main.rs
src/commands/: autonick.rs  birthday.rs  clear.rs  db_migration.rs  mod.rs  novena.rs  sit.rs
