[package]
name = "the_jouch"
version = "0.1.0"
authors = ["David <gw.chip.gw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# use default features minus framework & standard_framework
serenity = { version = "0.11", default-features = false, features = ["builder", "cache", "client", "collector", "gateway", "http", "model", "utils", "rustls_backend"] }
tokio = "1.28"
mini-redis = "*"
chrono = { version ="0.4", features = ["serde"] }
serde = "1.0"
ron = "*"
image = "0.24"
webp = { version = "0.2", features = ["img"] }
reqwest = "*"
enum-utils = "0.1"
rand="*"
shuttle-runtime = "0.20"
shuttle-serenity = "0.20"
shuttle-secrets = "0.20"
shuttle-static-folder = "0.20"
shuttle-shared-db = { version = "0.20", features = ["mongodb"] }
shuttle-persist = "0.20"
mongodb = { version = "*" }
anyhow = "*"
tracing = "*"
