[package]
name = "the_jouch"
version = "0.1.0"
authors = ["David <gw.chip.gw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# use default features minus framework & standard_framework
serenity = { version = "0.12", default-features = false, features = ["builder", "cache", "client", "collector", "gateway", "http", "model", "utils", "rustls_backend"] }
tokio = "1.34"
mini-redis = "*"
chrono = { version ="0.4", features = ["serde"] }
serde = "1.0"
ron = "*"
image = "0.25"
webp = { version = "0.3", features = ["img"] }
reqwest = "*"
enum-utils = "0.1"
rand="*"
shuttle-runtime = "0.44"
shuttle-serenity = "0.44"
shuttle-shared-db = { version = "0.44", features = ["mongodb"] }
shuttle-persist = "0.44"
mongodb = { version = "2.8.0" }
anyhow = "*"
tracing = "*"
